--- a/eric's portfolio/src/App.css
+++ b/eric's portfolio/src/App.css
@@ -131,7 +131,7 @@ main, footer {
 }
 
 /* Portfolio */
-.flex-container {
+.project-container {
   display: flex;
   flex-wrap: wrap;
   justify-content:space-evenly;
@@ -142,7 +142,7 @@ main, footer {
   text-align: left;
   align-items: end;
   flex: 1 1;
-  min-width: 200px;
+  min-width: 300px;
   max-width: 400px;
   height: 100px;
   position: relative;
